--- a/debian/control
+++ b/debian/control
@@ -2,10 +2,9 @@ Source: shotdetect
 Section: unknown
 Priority: optional
 Maintainer: atze <atze@fem.tu-ilmenau.de>
-Build-Depends: debhelper (>= 9), cmake, libxml2-dev,
- libxslt1-dev, libgd-dev, libavcodec-dev,
- libavutil-dev, libavformat-dev, libswscale-dev,
- dpkg-dev
+Build-Depends: debhelper (>= 9), cmake, clang, dpkg-dev,
+ libxml2-dev, libavutil-dev, libavformat-dev, libswscale-dev,
+ libxslt1-dev, libgd-dev, libavcodec-dev, libavdevice-dev
 Standards-Version: 3.9.5
 
 Package: shotdetect-cmd
