--- a/debian/rules
+++ b/debian/rules
@@ -26,5 +26,5 @@ include /usr/share/dpkg/default.mk
 override_dh_auto_configure:
 	dh_auto_configure -- -DUSE_WXWIDGETS=OFF
 
-
+override_dh_install:
 
