--- a/debian/control
+++ b/debian/control
@@ -9,7 +9,7 @@ Standards-Version: 3.9.5
 
 Package: shotdetect-cmd
 Architecture: any
-Depends: libc6, libgcc1, libstdc++6, libjpeg8, zlib1g, libpng12-0, libgd3, libxslt1.1, libxml2, ${shlibs:Depends}, ${misc:Depends}
+Depends: libc6, libgcc1, libstdc++6, libjpeg8, zlib1g, libpng12-0, libgd3 | libgd2, libxslt1.1, libxml2, ${shlibs:Depends}, ${misc:Depends}
 Description: detects scene changes in video files
  shotdetect detects scene changes in video files
 
