--- a/debian/rules
+++ b/debian/rules
@@ -26,5 +26,9 @@ include /usr/share/dpkg/default.mk
 override_dh_auto_configure:
 	dh_auto_configure -- -DUSE_WXWIDGETS=OFF
 
+#	dh_auto_configure -- -DUSE_WXWIDGETS=OFF -DCMAKE_BUILD_TYPE=Debug
+
 override_dh_install:
 
+#override_dh_strip:
+#	
